<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Главное меню -->
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="nastr">Настройки</string>

    <!-- Настройки -->
    <string name="settings_title">Настройки</string>
    <string name="tema">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддержку</string>
    <string name="strel_r">Пользовательское соглашение</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="no_results_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="retry">Обновить</string>

    <!-- кнопка очистить  в строке поиска -->
    <string name="clear_search">Очистить поиск</string>


    <!-- Ссылка на курс -->
    <string name="android_course_url">https://practicum.yandex.ru/android-developer/</string>

    <!-- Текст для отправки -->
    <string name="share_course_text">Привет! Есть очень интересный курс от "Яндекс Практикум":\n\n🔗 %s\n\nТам можно научиться программировать для Android!</string>
    <string name="share_dialog_title">Поделиться курсом</string>
    <string name="no_apps_found">Не найдено приложений для отправки</string>

    <!-- Данные для email -->
    <string name="support_email">opzadacha@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="no_email_client">Почтовое приложение не найдено</string>

    <!-- Ссылка на оферту -->
    <string name="terms_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="no_browser_found">Браузер не найден</string>
    <string name="search_hint">Поиск</string>

    <!-- Аудиоплеер -->

    <string name="album_cover_description">Обложка альбома</string>

    <!-- Кнопки управления -->
    <string name="add_to_playlist_description">Добавить в плейлист</string>
    <string name="play_pause_description">Воспроизвести или поставить на паузу</string>
    <string name="add_to_favorites_description">Добавить в избранное</string>
    <string name="back_button_description">Назад</string>
    <string name="unknown">Неизвестно</string>


    <!-- Информация о треке -->
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <!-- Ключи для плеера (исправление ошибки) -->
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>

    <!-- Состояния плеера -->
    <string name="playing">Воспроизведение</string>
    <string name="paused">Пауза</string>

    <!-- Медиатека -->
    <string name="medialibrary">Медиатека</string>
    <string name="medialibrary_is_empty">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_favorite">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="finish_playlist_creation_title">Завершить создание плейлиста?</string>
    <string name="finish_playlist_creation_message">Все несохраненные данные будут утеряны</string>
    <string name="playlist_created">Плейлист %1$s создан</string>

    <plurals name="tracks_count">
        <item quantity="one">%1$d трек</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="one">%1$d минута</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <string name="share_playlist_description">Поделиться плейлистом</string>
    <string name="menu_playlist_description">Меню плейлиста</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист «%1$s»?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="playlist_is_empty_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="empty_playlist_tracks">В этом плейлисте ещё нет треков</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="playlist_info_format">%1$s • %2$s</string>

</resources>