<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/search"
        app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
        app:titleTextColor="?attr/android:textColorPrimary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edittext_rounded_bg"
            android:drawableStart="@drawable/poisk"
            android:drawablePadding="8dp"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:paddingStart="12dp"
            android:paddingEnd="48dp"
            android:singleLine="true"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorSurface"
            android:textFontWeight="400" />

        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/clear_search"
            android:src="@drawable/vector"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/historyLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/history_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/search_history"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="19sp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/clear_history_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_rounded_bg"
                android:text="@string/clear_history"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimaryContainer"
                app:backgroundTint="?attr/colorPrimaryContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@id/clear_history_button"
                app:layout_constraintTop_toBottomOf="@id/history_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/errorImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/placeholder_internet_error" />

            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/connection_error"
                android:textColor="?attr/android:textColorPrimary"
                android:textSize="19sp" />

            <Button
                android:id="@+id/retryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_bg"
                android:text="@string/retry"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnPrimaryContainer"
                app:backgroundTint="?attr/colorPrimaryContainer" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/noResultsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/placeholder_no_results" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_results_found"
                android:textColor="?attr/android:textColorPrimary"
                android:textSize="19sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_tracks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </FrameLayout>

</LinearLayout>